# neural-network-NIST

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/growth/: cnn_ladder.yaml  shapes_ladder.yaml
configs/models/: cnn_full.yaml  cnn_lines_hv.yaml  (+8 more)
data/: README.md
hebbian/: analyze_rounds.py  analyze_series.py  compare_models.py  competitive_net.py  diagnose_stability.py  generate_lines.py  show_winners.py  sweep_inhib_gain.py  sweep_reinforce_gain.py  train.py  train_one.py  train_rounds.py  train_series.py  train_watch.py  webapp.py  webapp_evolution.py
reports/: robustness_bipolar_compare.json  robustness_bipolar_noise_compare.json  robustness_gaussiano_live_compare.json
scripts/: aggregate_robustness.py  compare.py  compare_robustness.py  compare_trained_robustness.py  download_data.py  eval_inverted.py  eval_inverted_noisy_mix.py  generate_inverted.py  generate_noisy.py  generate_shapes.py  grow.py  lr_find.py  noise_train_compare.py  overnight_curriculum.py  plot.py  robustness_ckpts.py  robustness_kernel_sweep.py  robustness_noisetype.py  robustness_noisetype_sweep.py  robustness_test.py  sweep.py  sweep_kernel.py  sweep_noise_type.py  train.py  train_bipolar_noise.py  train_gaussiano_live.py  train_inverted_mix.py  train_inverted_noisy_mix.py  train_normal_gaussiano.py  watch_noisetype_progress.py
tests/: test_callbacks.py  test_checkpoint.py  test_data.py  test_grow.py  test_lr_finder.py  test_metrics.py  test_models.py  test_scheduler.py  test_shapes.py  test_transforms.py
trainings/: TRAININGS.md
(+44 files in other folders)
